--- a/MVC5Course/Views/Shared/_Layout.cshtml
+++ b/MVC5Course/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li>@Html.ActionLink("連絡方式", "Contact", "Home")</li>
 					<li>@Html.ActionLink("測試", "test", "Home")</li>
 					<li>@Html.ActionLink("Hello測試", "Index", "Hello")</li>
+					<li>@Html.ActionLink("產品管理", "Index", "Products")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
